--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,22 @@
 @font-face {
     font-family: montserrat;
+    font-weight: normal;
     src: url(fonts/montserrat/regular.otf);
 }
 
 @font-face {
-    font-family: montserrat-semibold;
-    src: url(fonts/montserrat/semibold.otf);
+    font-family: montserrat-light;
+    font-weight: normal;
+    src: url(fonts/montserrat/light.otf);
 }
 
 @font-face {
-    font-family: montserrat-black;
-    src: url(fonts/montserrat/black.otf);
+    font-family: montserrat-bold;
+    font-weight: normal;
+    src: url(fonts/montserrat/bold.otf);
 }
 
-/**
- *  general page scaffolding
- * -----------------------------------------------------------------------------
- **/
-
+/* page layout */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -27,122 +26,135 @@
 
 html {
   font-size: 14px;
-}
-
-body {
-  font-family: montserrat;
+  font-family: montserrat-light, sans-serif;
   letter-spacing: 0.01em;
+  color: #4d4d4d;
   -webkit-font-smoothing: antialiased;
-  background: #81AFD3;/*#93BEDF;*/
-  color: #E1EFF6;
 }
 
-a {
-  text-decoration: none;
-  color: #ECCBD9;
-  border-bottom: 1px solid #ECCBD9;
+body > header {
+  width: 100%;
+  padding: 2rem 2rem 0.2rem 2rem;
+  background: #f97b73;
+  color: white;
 }
 
-h1 {
-  font-size: 4em;
+body > header > a {
+  display: none;
 }
 
-p {
-  line-height: 1.2em;
-}
-
-p + p {
-  margin-top: 1.2em;
-}
-
-footer  {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  height: 100%;
-  width: 8rem;
-  overflow: hidden;
-}
-
-footer p {
-  font-size: 4.5em;
-  transform: rotate(-90deg);
-  transform-origin: bottom left;
-  position: absolute;
-  bottom: -0.2rem;
-  left: 7.4rem;
-  font-family: montserrat-black;
-  opacity: 0.3;
-  line-height: 0.6em;
-}
-
-body > header, body > section {
-  margin: 0 2.5rem;
-}
-
-header h3 {
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  font-size: 1rem;
-  color: #B0D0D3;
-  font-family: montserrat;
-}
-
-header span {
-  font-family: montserrat-black;
-}
-
-aside {
-  font-size: 0.75rem;
-  font-style: italic;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  font-family: montserrat-semibold;
-  margin: 1em 0 0 -0.07em;
-}
-
-/*-lists-*/
-ul {list-style: none;
-    padding: 0;
-}
-ul li {
-  display: inline-block;
-}
-ul li:nth-child(n+2):before {
-  content: "// ";
-  color: #B0D0D3;
-}
-
-dl {
-  position: relative;
-}
-dd {
-  margin-left: 2rem;
-}
-dt {
-  position: absolute;
-  color: #B0D0D3;
-  font-family: montserrat-semibold;
+body > section {
+  margin: 0 2rem;
+  max-width: 35rem;
 }
 
 body {
   margin-bottom: 8rem;
 }
 
-@media (min-width:769px) {
+body.splash > header {
+  background: none;
+  color: inherit;
+}
+
+body.splash p {
+  line-height: 1.2em;
+  font-family: montserrat;
+}
+
+a {
+  text-decoration: none;
+  color: #f97b73;
+  border-bottom: 0.15em solid;
+}
+
+h1,h2,h3 {
+  font-family: montserrat-bold, sans-serif;
+  margin: 1.2em 0 0 -0.07em;
+}
+
+h1 {
+  margin: 0.5em 0 -0.14em -0.07em;
+  font-size: 4em;
+}
+
+h2 {
+  font-size: 1em;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-bottom: 0.5em;
+  color: #f97b73;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+h3 + p, dt {
+  font-family: montserrat-bold, sans-serif;
+  font-weight: bold;
+}
+
+p, ul, dl {
+  line-height: 1.4em;
+}
+
+aside, aside p {
+  line-height: 1.2em;
+}
+
+p + p, aside + p {
+  margin-top: 0.5em;
+}
+
+aside {
+  font-size: 0.8rem;
+  font-style: italic;
+}
+
+/* lists */
+ul {list-style: none;
+    padding: 0;
+}
+ul li {
+  display: inline-block;
+}
+
+ul li:after,
+ul li::after {
+  content: " //";
+  color: #f97b73;
+}
+
+ul li:last-child::after {
+  content: none;
+}
+
+dl {
+  position: relative;
+}
+
+dd {
+  margin-left: 2rem;
+}
+
+dt {
+  position: absolute;
+  color: #f97b73;
+}
+
+/* media */
+@media print, screen and (min-width:768px) {
   html {
-    font-size: 16px;
+    font-size: 18px;
   }
 
-  body > header, body > section {
-    margin: 0 8rem;
-    max-width: 40rem;
+  body > header {
+    padding: 8rem 2rem 0.2rem 14rem;
   }
 
-  body.cv > header, .cv > section {
-    margin-left: 15rem;
-    margin-right: 2.5rem;
+  body > section {
+    margin-left: 14rem;
   }
 
   aside {
@@ -151,20 +163,58 @@ body {
     position: relative;
     float: left;
     margin-left: -12rem;
-    top: -2.4rem;
+    top: -2.5rem;
     padding-right: 2rem;
+    color: #f97b73;
   }
 }
 
-@media (max-width:768px) {
+@media screen and (max-width:767px) {
   aside {
     margin-top: 0.5rem;
-    border-left: 3px solid #B0D0D3;
+    border-left: 3px solid #f97b73;
     margin-left: 0.5rem;
     padding-left: 0.5rem;
   }
 
   dd + aside {
     margin-left: 2rem;
+  }
+}
+
+@media print {
+  html {
+    font-size: 10px;
+  }
+
+  a {
+    border: none;
+  }
+
+  body {
+    margin-bottom: 0rem;
+  }
+
+  aside {
+    font-size: 0.9rem;
+  }
+
+  body > header {
+    padding-top: 0;
+    color: #f97b73;
+    background: white;
+    padding-bottom: 0.8em;
+  }
+
+  body > header > h1 {
+    margin-top: 0;
+  }
+
+  body > header > a {
+    display: inline;
+  }
+
+  body > header > p {
+    display: none;
   }
 }
