--- a/css.css
+++ b/css.css
@@ -43,7 +43,7 @@
 }
 
 html {
-  font-size: calc(12rem / 16);
+  font-size: calc(14rem / 16);
   font-family: sofia, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -61,6 +61,7 @@ body {
   margin: 0 auto;
   padding: 2rem;
   max-width: 55rem;
+  background: var(--bg);
 }
 
 section {
@@ -152,11 +153,12 @@ header {
 }
 
 header > h1 {
-  font-size: 4.4rem;
+  font-size: 3.8rem;
   line-height: 1.2em;
   font-weight: normal;
   margin: 0.5em 0;
   align-self: flex-end;
+  z-index: 1;
   text-decoration: underline;
   text-decoration-color: var(--accent);
   text-decoration-thickness: 0.05em;
@@ -164,7 +166,7 @@ header > h1 {
 }
 
 .img-date {
-  margin-top: -5rem;
+  margin-top: -6rem;
   display: flex;
   gap: 1rem;
   flex-direction: row;
@@ -173,7 +175,7 @@ header > h1 {
 }
 
 header > .img-date > h2 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   flex: none;
   font-weight: 400;
   text-align: right;
@@ -181,7 +183,6 @@ header > .img-date > h2 {
 }
 
 header > .img-date img {
-  z-index: -1;
   min-width: 10rem;
   max-width: 35rem;
   filter: saturate(0.6) brightness(1.3);
@@ -204,10 +205,6 @@ nav > ol > li > a {
 /*----------------------------------------------------------------------------*/
 
 @media screen and (min-width: 640px) {
-  html {
-    font-size: calc(14rem / 16);
-  }
-
   header > h1 {
     font-size: min(5.4em, 90px);
     margin: 0.5em;
@@ -219,5 +216,7 @@ nav > ol > li > a {
 
   header > .img-date > h2 {
       margin-bottom: 1em;
+      font-size: 1.5rem;
+
   }
 }
